# nba-standings-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
.github/workflows/: fly.yml
src/: config.rs  main.rs
src/api/: client.rs  models.rs
src/bot/: commands.rs  mod.rs  scheduler.rs
src/standings/: cache.rs  compute.rs  format.rs  mod.rs
