[package]
name = "nba-standings-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
    "framework",
    "rustls_backend",
] }
poise = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Scheduling
tokio-cron-scheduler = "0.13"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
